# zylith-solana

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  package.json
.github/workflows/: ci.yml
asp/: .env.example  Cargo.toml  README.md
asp/src/: config.rs  error.rs  main.rs
asp/src/api/: mod.rs  openapi.rs  routes.rs  types.rs  validation.rs
asp/src/api/handlers/: burn.rs  deposit.rs  mint.rs  nullifier.rs  status.rs  swap.rs  sync.rs  tree.rs  withdraw.rs
asp/src/db/: schema.rs
asp/src/prover/: worker.rs
asp/src/relayer/: mod.rs  solana.rs
asp/src/sync/: solana.rs
asp/tests/: integration.rs
asp/worker/: worker.mjs
circuits/: burn.circom  liquidity.circom  membership.circom  mint.circom  package.json  swap.circom
circuits/common/: commitment.circom  merkle.circom
circuits/scripts/: compile_circuits.sh  generate_proofs.mjs  generate_vk_rs.js  setup.sh
circuits/scripts/lib/: commitment.mjs
contracts/anchor/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
contracts/anchor/programs/zylith/: Cargo.toml
contracts/anchor/programs/zylith/src/: lib.rs  math.rs  vk.rs
contracts/anchor/scripts/: deploy-metadata.mjs  faucet.ts  init-pool.ts  init.ts  test-contract.ts
contracts/anchor/tests/: zylith.ts
docs/: ARCHITECTURE.md  ASP_API.md  CIRCUITS.md  DESIGN_SYSTEM.md  SDK.md
frontend/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  polyfills.ts  vite-env.d.ts
frontend/src/config/: env.ts  pda.ts  solana.ts  tokens.ts  zylith.json
frontend/src/hooks/: useAllPositionsFees.ts  useBurn.ts  useCanPoll.ts  useDeposit.ts  useMint.ts  usePoolOperations.ts  usePoolState.ts  usePositionFees.ts  useSwap.ts  useWalletSync.ts  useWithdraw.ts  useZylithClient.ts
frontend/src/lib/: format.ts  queryClient.ts  queryOptions.ts  solana.ts
frontend/src/pages/: Dashboard.tsx  LandingPage.tsx  LiquidityPage.tsx  PoolBrowser.tsx  PositionsPage.tsx  SettingsPage.tsx  ShieldPage.tsx  SwapPage.tsx
frontend/src/providers/: CavosProvider.tsx  (+1 more)
scripts/: dev-all.mjs  gen-env.sh
sdk/: README.md  package.json  tsconfig.json  vitest.config.ts
sdk/scripts/: real-zk-tx.mjs
sdk/src/: client.ts  index.ts
(+91 files in other folders)
