[package]
name = "zylith-asp"
version = "0.1.0"
edition = "2021"
description = "Anonymous Service Provider for Zylith shielded CLMM on Solana"

[dependencies]
# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Hex/BigInt utilities
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"

# Rate limiting
governor = "0.8"
tower_governor = "0.6"

# Async trait (for dyn Relayer dispatch)
async-trait = "0.1"

# OpenAPI documentation
utoipa = "4"

# Misc
uuid = { version = "1", features = ["v4"] }
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
anchor-client = "0.30"
bs58 = "0.5.1"
solana-transaction-status = "1.18"

[dev-dependencies]
axum-test = "18"
tempfile = "3"
