[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
] }

[profile.release]
overflow-checks = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
