[package]
name = "zylith"
version = "0.1.0"
description = "Zylith Protocol Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zylith"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[lints]
workspace = true

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18"
borsh = "0.10"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"
groth16-solana = "0.2.0"

